# king

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  experiment_daily_analysis.ipynb  experiment_statistical_test.ipynb  experiment_statistics.ipynb  experiment_validation.ipynb  segmentation_analysis.ipynb
src/: config.py
src/data/: big_query_loader.py  feature_extraction.py
src/data/queries/: assignment.sql  assignment_activity.sql  assignment_activity_table.sql  daily_metrics.sql  historical_activity.sql  historical_activity_table.sql  total_data.sql
src/utility/: plot.py  statistics.py
